--- a/styles/app.css
+++ b/styles/app.css
@@ -7,7 +7,6 @@
   margin: 0 auto;
   padding: 0 15px; }
 
-/* Ba-grid  */
 .ba-row {
   display: flex;
   flex-wrap: wrap;
@@ -57,19 +56,6 @@
 
 .ba-col-12 {
   width: 100%; }
-
-/* ba-common */
-.ba-text-center {
-  text-align: center; }
-
-.ba-text-left {
-  text-align: left; }
-
-.ba-text-right {
-  text-align: right; }
-
-.ba-text-justify {
-  text-align: justify; }
 
 @media screen and (min-width: 576px) {
   .ba-col-sm-12 {
@@ -149,6 +135,19 @@
   .ba-col-lg-1 {
     width: 8.33%; } }
 
+/* ba-common */
+.ba-text-center {
+  text-align: center; }
+
+.ba-text-left {
+  text-align: left; }
+
+.ba-text-right {
+  text-align: right; }
+
+.ba-text-justify {
+  text-align: justify; }
+
 .ba-header {
   background-color: #fff; }
   .ba-header__top {
@@ -157,18 +156,18 @@
     height: 2em;
     display: flex;
     align-items: center; }
-  .ba-header__top-inner {
+  .ba-header__top-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: #fff; }
-  .ba-header__main-inner {
+  .ba-header__main-wrapper {
     flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
     align-items: center; }
     @media screen and (min-width: 768px) {
-      .ba-header__main-inner {
+      .ba-header__main-wrapper {
         flex-wrap: nowrap; } }
   .ba-header__main-logo {
     display: flex;
@@ -254,16 +253,17 @@
     font-size: 0.8rem;
     line-height: 16px; }
 
-.contacts {
+.contacts__phone-link {
+  text-decoration: none;
   color: #fff; }
-  .contacts__phone {
-    color: inherit;
-    text-decoration: none; }
 
 .user {
   color: black;
   display: flex;
   justify-content: space-between; }
+  .user__account {
+    color: #fff;
+    text-decoration: none; }
 
 .search-form {
   display: flex; }
@@ -290,16 +290,18 @@
       flex-wrap: wrap;
       padding: 0;
       margin: 0; } }
-  .ba-brands__items:hover {
+  .ba-brands__item:hover {
     transform: scale(1.1); }
 
 .ba-baners {
-  margin-top: 4rem;
   display: none;
   overflow: hidden; }
   @media screen and (min-width: 768px) {
     .ba-baners {
       display: block; } }
+  .ba-baners__wrapper {
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
   .ba-baners__item:hover {
     opacity: 0.8; }
   .ba-baners-row {
@@ -316,77 +318,78 @@
   display: flex;
   border-top: solid 1px #232323;
   border-bottom: solid 1px #232323; }
-  .breadcrumbs-nav {
+  .breadcrumbs__list {
     display: flex;
     list-style: none;
     margin: 0.1rem; }
     @media screen and (min-width: 768px) {
-      .breadcrumbs-nav {
+      .breadcrumbs__list {
         margin: 1rem; } }
-    .breadcrumbs-nav-item__link {
-      text-decoration: none;
-      color: #232323; }
+  .breadcrumbs__link {
+    text-decoration: none;
+    color: #232323; }
 
 .category {
   padding-right: 0.8rem; }
-  .category-list {
+  .category__list {
     list-style: none; }
-  .category-item {
+  .category__item {
     margin: 0.4rem; }
-    .category-item__link {
-      text-decoration: none;
-      color: #232323;
-      font-weight: 500; }
-      .category-item__link:hover {
-        opacity: 0.8; }
+  .category__link {
+    text-decoration: none;
+    color: #232323;
+    font-weight: 500; }
+    .category__link:hover {
+      opacity: 0.8; }
 
 .subscribe {
   display: flex;
   background-color: #ededed;
   color: #6c6c6c; }
-  .subscribe-mail {
+  .subscribe__wrapper {
     display: flex;
-    justify-content: center; }
-    .subscribe-mail__input {
-      width: 100%; }
-    .subscribe-mail span {
-      display: none;
-      padding-right: 1rem; }
-      @media screen and (min-width: 768px) {
-        .subscribe-mail span {
-          display: flex;
-          align-items: center; } }
-    .subscribe-mail button {
-      color: #6c6c6c;
-      background-color: #6c6c6c;
-      padding: 0.9rem; }
-  .subscribe .ba-social {
-    display: flex;
-    align-items: center;
-    justify-content: space-around; }
-    .subscribe .ba-social-wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center; }
-    .subscribe .ba-social__items {
-      text-decoration: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #6c6c6c;
-      padding: 1rem; }
-      .subscribe .ba-social__items:hover {
-        background-color: #fd926d; }
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    @media screen and (min-width: 768px) {
+      .subscribe__wrapper {
+        flex-wrap: nowrap; } }
 
-.subscribe-inner {
+.subscribe-form {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap; }
-  @media screen and (min-width: 768px) {
-    .subscribe-inner {
-      flex-wrap: nowrap; } }
+  justify-content: center; }
+  .subscribe-form__input {
+    width: 100%; }
+  .subscribe-form span {
+    display: none;
+    padding-right: 1rem; }
+    @media screen and (min-width: 768px) {
+      .subscribe-form span {
+        display: flex;
+        align-items: center; } }
+  .subscribe-form button {
+    color: #6c6c6c;
+    background-color: #6c6c6c;
+    padding: 0.9rem; }
 
-.goods-woman-wrapper {
+.ba-social {
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
+  .ba-social__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .ba-social__link {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #6c6c6c;
+    padding: 1rem; }
+    .ba-social__link:hover {
+      background-color: #fd926d; }
+
+.woman-main {
   display: flex; }
 
 .goods-wrapper {
@@ -450,14 +453,12 @@
     .card__add-cart .plus {
       padding-left: 0.2rem; }
 
-.map-section__inner {
+.map-section__wrapper {
   display: flex; }
 
-.map-section__google {
-  height: 400px; }
-  @media screen and (min-width: 768px) {
-    .map-section__google {
-      height: 600px; } }
+@media screen and (min-width: 768px) {
+  .map-section__google {
+    height: 600px; } }
 
 .ba-footer {
   background-color: #232323; }
@@ -466,7 +467,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap; }
-  .ba-footer__items {
+  .ba-footer__item {
     padding: 1rem;
     text-decoration: none;
     color: #fff; }
@@ -487,7 +488,7 @@
   height: 100%;
   background-color: #00000050;
   z-index: 130; }
-  .cart-body {
+  .cart__body {
     position: relative;
     margin: auto;
     width: 1024px;
@@ -497,10 +498,17 @@
     padding: 25px;
     overflow: auto;
     border-radius: 3px; }
-  .cart-title {
+  .cart__body-head {
+    display: flex;
+    justify-content: space-between; }
+  .cart__body-head-title {
     font-size: 28px;
     color: #4d5f71; }
-  .cart-wrapper {
+  .cart__body-head-total {
+    font-size: 28px; }
+    .cart__body-head-total span {
+      color: #077c24; }
+  .cart__wrapper {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -509,12 +517,9 @@
     border: 1px solid #4d5f713f;
     border-radius: 3px;
     padding: 20px; }
-    .cart-wrapper #cart-empty {
+    .cart__wrapper #cart-empty {
       font-size: 24px;
       color: #4d5f71; }
-  .cart-head {
-    display: flex;
-    justify-content: space-between; }
   .cart-close {
     position: absolute;
     top: 5px;
@@ -527,13 +532,64 @@
       -webkit-transform: scale(1.2);
       -ms-transform: scale(1.2);
       transform: scale(1.2); }
-  .cart-total {
-    font-size: 28px; }
-    .cart-total span {
-      color: #077c24; }
   .cart-confirm {
     display: block;
     margin-left: auto; }
+
+.goods {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 8px;
+  margin-bottom: 10px; }
+  .goods__img {
+    max-width: 120px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px; }
+    .goods__img-wrapper {
+      flex-basis: 120px; }
+  .goods__description {
+    padding: 10px;
+    flex-grow: 1; }
+  .goods__price-count {
+    padding-right: 10px; }
+  .goods__trigger {
+    display: flex;
+    justify-content: center; }
+  .goods-add-wishlist {
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    background-position: 4px -2589px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 32px;
+    border: none; }
+    .goods-add-wishlist.active {
+      background-position: 4px -2633px; }
+  .goods-delete {
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    background-position: 8px -1865px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 32px;
+    border: none; }
+  .goods-count {
+    display: flex;
+    justify-content: center; }
+  .goods-count-total {
+    width: 32px; }
+
+.goodsIncart-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 8px;
+  margin-bottom: 10px; }
 
 .btn_white-brdr {
   color: #232323;
