fix wishlist and womanPage

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -666,12 +666,9 @@
 			color-stop(48%, #fff)
 		)
 		left top/100% 200% no-repeat;
-	background: -webkit-linear-gradient(bottom, #232323 52%, #fff 48%) left
-		top/100% 200% no-repeat;
-	background: -o-linear-gradient(bottom, #232323 52%, #fff 48%) left top/100%
-		200% no-repeat;
-	background: linear-gradient(to top, #232323 52%, #fff 48%) left top/100% 200%
-		no-repeat;
+	background: -webkit-linear-gradient(bottom, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
+	background: -o-linear-gradient(bottom, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
+	background: linear-gradient(to top, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
 }
 
 .btn_gray-brdr {
@@ -685,12 +682,9 @@
 			color-stop(48%, #ededed)
 		)
 		left top/100% 200% no-repeat;
-	background: -webkit-linear-gradient(bottom, #232323 52%, #ededed 48%) left
-		top/100% 200% no-repeat;
-	background: -o-linear-gradient(bottom, #232323 52%, #ededed 48%) left top/100%
-		200% no-repeat;
-	background: linear-gradient(to top, #232323 52%, #ededed 48%) left top/100%
-		200% no-repeat;
+	background: -webkit-linear-gradient(bottom, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
+	background: -o-linear-gradient(bottom, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
+	background: linear-gradient(to top, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
 }
 
 .btn_white-brdr:active,
